# Checkpoint

./: .checkpoint.yaml  .gitignore  CLAUDE.md  MASTER_CONTEXT.md  README.md  checkpoint.sh  main.py  pyproject.toml  requirements.txt
.chroma_db/: chroma.sqlite3
.github/: copilot-instructions.md
.github/workflows/: checkpoint.yml  publish.yml
checkpoint/: __init__.py  __main__.py
checkpoint_agent/: __main__.py  agents.py  config.py  git_utils.py  graph.py  llm.py  llm_diagrams.py  mermaid_utils.py  setup_wizard.py  storage.py
checkpoint_agent/templates/: checkpoint.yml
checkpoints/: 2026-01-13-033cedcd8e1ff6b2ebc24727f0cad8f7de603c47.md  2026-01-13-71bf07cf8fd7fbfe58110ac0f45ffb419b5a1abc.md  2026-01-13-735b1327a01d113d21810d52a1a6b7366c68b832.md  2026-01-13-8411d7d073bd015b74eb69d0fd6d11709187cef8.md  2026-01-13-a1fa3c3c7c09ec6d8c0fccc316f258bbfbfff45f.md  2026-01-13-a4a3e0448377e46e9a79345987b62d3ae37ceb6f.md  Checkpoint-Bangaragiri-2026-02-10-6fa8c31.md  Checkpoint-Bangaragiri-2026-03-12-29bba74.md  Checkpoint-Bangaragiri-2026-03-12-d232280.md  Checkpoint-Bangaragiri.md  Checkpoint-BurntDosa.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-40db6fb.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-6f11dc8.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-75d89e5.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-813b178.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-a8a3957.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-c2b94b6.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-c3a645c.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-e07198f.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-e45d7f2.md  Checkpoint-Gagan_N_Bangaragiri-2026-02-17-ff39404.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-05-69adc87.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-05-e48d0ef.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-05-f8eadd7.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-06-0adb903.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-06-28087d1.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-06-5a74008.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-06-f06a7b2.md  Checkpoint-Gagan_N_Bangaragiri-2026-03-06-f8e138f.md  Checkpoint-GenDosa.md  Checkpoint_107536730_BurntDosa_users_noreply_github_com.md  Checkpoint_850085375_genpact_com.md  Checkpoint_Bangaragiri.md  Checkpoint_Checkpoint_Agent.md  Checkpoint_Gagan_N_Bangaragiri.md  PR-1-feature-checkpoint-stats.md
src/: agents.py  config.py  git_hook_installer.py  git_utils.py  graph.py  llm.py  llm_diagrams.py  mermaid_utils.py  setup.py  storage.py  vector_db.py
tests/: test_mermaid_utils.py  test_workflow.py
