[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint-agent"
version = "1.2.1"
description = "AI-powered developer onboarding and context recovery system for git repositories"
authors = [
    {name = "Gagan N Bangaragiri", email = "gagan.bangaragiri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["git", "ai", "onboarding", "documentation", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.0.0",
    "httpx>=0.24.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
checkpoint = "checkpoint_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/BurntDosa/Checkpoint"
Documentation = "https://github.com/BurntDosa/Checkpoint#readme"
Repository = "https://github.com/BurntDosa/Checkpoint"
Issues = "https://github.com/BurntDosa/Checkpoint/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["checkpoint_agent*"]
exclude = ["tests*", "checkpoints*", ".chroma_db*"]

[tool.setuptools.package-data]
checkpoint_agent = ["templates/*.yml"]
